fix canvas width on collapsed

--- a/src/BlobField/style.module.scss
+++ b/src/BlobField/style.module.scss
@@ -25,9 +25,9 @@
     svg, canvas {
         position: fixed;
         bottom: 0;
-        left: 0;
+        // left: 0;
         right: 0;
-        top: 0;
+        // top: 0;
         z-index: 999;
     }
 
